# ageniusdesk-ce

./: .env.example  .gitattributes  .gitignore  AI-SETUP-PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile.example  Dockerfile  KNOWLEDGE-REGISTRY.yaml  README.md  ROADMAP.md  docker-compose.override.example.yml  docker-compose.prod.example.yml  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
agd_module_worker/: __init__.py  main.py  sandbox.py
backend/: audit.py  auth_gate.py  config.py  config_overlay.py  database.py  main.py  module_registry.py  net.py  ratelimit.py  scheduler.py  totp.py  websocket.py
backend/modules/: __init__.py
backend/n8n_workflows/: global-error-handler.json
backend/skills_seed/: README.md
docs/: CONFIG.md  DEPLOY.md  README.md
docs/architecture/: api.md  auth.md  data-model.md  frontend.md  instance-attribution.md  modules.md  overview.md  security.md  silent-failure-detection.md
docs/code-review/: 2026-07-01-cross-module-review.md  2026-07-01-full-security-review.md  2026-07-07-silent-failure-detection-review.md  2026-07-16-full-security-review.md  2026-07-16-security-fix-plan-for-opus.md  security-hardening-findings.md  security-hardening.diff
docs/community-templates/: bundle-schema.md  example-uptime-kuma.json
docs/guide/: admin-users.md  agent-fleet.md  ai-assistant.md  code-lab.md  containers.md  errors.md  getting-started.md  import-export.md  insights.md  instances.md  knowledge.md  secrets.md  themes-music.md  workflows.md
docs/specs/: 2026-06-24-authorization-and-accounts.md  2026-06-24-onboarding-and-coachmarks-review.md  2026-06-24-onboarding-and-coachmarks.md  2026-06-26-community-module-security-and-youtube-research.md  2026-06-26-opentelemetry-observability.md  2026-06-27-cost-observability.md  2026-06-27-full-application-review.md  2026-06-27-host-bridge-review.md  2026-06-27-isolation-prerelease-review.md  (+21 more)
frontend/: index.html
tests/: conftest.py  test_agents_gate.py  test_assistant_authz_ssrf.py  test_assistant_completion.py  test_assistant_providers.py  test_assistant_tool_gate.py  test_backups.py  test_container_self_guard.py  test_cross_module_review.py  test_docker_capability_scanner.py  test_error_handler_install.py  test_error_item_xss.py  test_fleet_health.py  test_health_deadman.py  test_health_detection.py  test_high_severity_fixes.py  test_host_bridge.py  test_instance_map.py  test_mcp_gate_against_real_server.py  test_module_runtime.py  test_module_security.py  test_module_worker.py  test_n8n_bundle.py  test_n8n_mcp_provision.py  test_otel_receiver.py  test_promote.py  test_review_followups.py  test_review_medium_low.py  test_router_rbac.py  test_security_hardening.py  test_security_hardening_2026_07_16.py  test_seed_refresh.py  test_skills_seed.py  test_tool_approval_frontend.py
(+186 files in other folders)
